# XCS231N-Course

./: .gitignore  .python-version  LICENSE  Makefile  README.md  meta.json  points.json  pyproject.toml  requirements.cuda.txt  requirements.txt
src/: autograde_utils.py  collect_submission.py  collect_submission.sh  environment.yml  environment_cuda.yml  grader.py
src/submission/: BatchNormalization.ipynb  ConvolutionalNetworks.ipynb  Dropout.ipynb  FullyConnectedNets.ipynb  PyTorch.ipynb  RNN_Captioning_pytorch.ipynb  Self_Supervised_Learning.ipynb  Transformer_Captioning.ipynb  __init__.py  collect_submission.ipynb  features.ipynb  knn.ipynb  softmax.ipynb  two_layer_net.ipynb
src/submission/xcs231n/: data_utils.py  features.py  im2col.py  im2col_cython.c  im2col_cython.cp312-win_amd64.pyd  image_utils.py  layer_utils.py  layers.py  optim.py  rnn_layers_pytorch.py  utils.py  (+2 more)
tex/: 00-intro.tex  macros.tex  main.tex  submission.tex
tex/00-instructions/: 02-4-notebook-submission.tex  04-autograder.pytex
tex/01-batch-normalization/: 00-main.tex
tex/01-image-captioning-with-transformers/: 00-main.tex
tex/01-k-nearest-neighbor/: 00-main.tex
tex/02-dropout/: 00-main.tex
tex/02-self-supervised-learning-for-image-classification/: 00-main.tex
tex/02-softmax/: 00-main.tex
tex/03-convolutional-neural-networks/: 00-main.tex
tex/03-submitting/: 00-main.tex
tex/03-two-layer-nn/: 00-main.tex
tex/04-image-features/: 00-main.tex
tex/04-pytorch-on-cifar-10/: 00-main.tex
tex/05-image-captioning-with-vanilla-rnns/: 00-main.tex
tex/05-train-fcnn/: 00-main.tex
(+17 files in other folders)
