[project]
name = "xcs231n"
version = "0.1.0"
description = "Deep learning for computer vision course environment"
requires-python = ">=3.12"
dependencies = [
    "notebook==7.3.2",
    "h5py==3.12.1",
    "imageio==2.37.0",
    "ipython==9.1.0",
    "json5==0.9.25",
    "matplotlib==3.10.0",
    "pillow==11.1.0",
    "future==1.0.0",
    "cython==3.0.11",
    "scipy==1.15.3",
    "pandas==2.3.1",
    "tqdm==4.67.1",
    "scikit-learn==1.7.1",
    "thop==0.1.1-2209072238"
]
